# geoscience-data-utils

./: .buildinfo  .gitignore  DOCUMENTATION.md  README.md  authors.html  changelog.html  development.html  genindex.html  index.html  installation.html  license.html  py-modindex.html  pyproject.toml  richardutils.html  searchindex.js
.github/workflows/: build-test.yml  publish-docs.yml
_sources/: index.rst.txt  installation.md.txt
_sources/notebooks/: Basic_usage.ipynb.txt
docs/: conf.py  development.md  docs_quickstart.md  index.rst  installation.md  richardutils.rst  updating_documentation.md
docs/_build/html/: authors.html  changelog.html  contributing.html  development.html  genindex.html  index.html  installation.html  license.html  richardutils.html  search.html
notebooks/: Basic_usage.html
scripts/: README.md  build_docs.sh  check_docstrings.py  validate_links.py
src/richardutils/: __init__.py  cli.py  richardutils.py
tests/: test_richardutils.py  test_richardutils_cli.py
